force-app/main/default/objects/WD_Projects__c/WD_Projects__c.object-meta.xml
<CustomObject>
    <label>WD Projects</label>
    <nameField>
        <displayFormat>PRO-{0000}</displayFormat>
        <label>Pro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WD Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>