force-app/main/default/objects/WD_Projects__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New_Asset_Build</fullName>
                <label>New Asset - Build</label>
            </value>
            <value>
                <fullName>Refurb</fullName>
            </value>
            <value>
                <fullName>New Asset Purchase</fullName>
                <label>New Asset - Purchase</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>