force-app/main/default/objects/WD_Projects__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>