force-app/main/default/objects/WD_Projects__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>WD Projects</relationshipLabel>
    <relationshipName>WD_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>