force-app/main/default/objects/WD_Projects__c/fields/Monday_Board__c.field-meta.xml
<CustomField>
    <fullName>Monday_Board__c</fullName>
    <label>Monday Board</label>
    <type>Url</type>
</CustomField>