force-app/main/default/objects/WD_Projects__c/fields/P_Name__c.field-meta.xml
<CustomField>
    <fullName>P_Name__c</fullName>
    <description>In a couple of words describe the New Build or Refurb</description>
    <label>Project Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>