force-app/main/default/objects/WD_Projects__c/fields/Paper__c.field-meta.xml
<CustomField>
    <fullName>Paper__c</fullName>
    <label>Paper</label>
    <type>Url</type>
</CustomField>