force-app/main/default/objects/WD_Projects__c/fields/Team_Channel__c.field-meta.xml
<CustomField>
    <fullName>Team_Channel__c</fullName>
    <label>Team Channel</label>
    <type>Url</type>
</CustomField>