force-app/main/default/objects/WD_Projects__c/fields/Wd_asset_del__c.field-meta.xml
<CustomField>
    <fullName>Wd_asset_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A project can often have a parent asset and many child assets.  In this event the Parent asset is linked to the Project</inlineHelpText>
    <label>WD Asset (Parent)</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>WD Projects</relationshipLabel>
    <relationshipName>WD_Projects_del</relationshipName>
    <type>Lookup</type>
</CustomField>