force-app/main/default/objects/WD_Projects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>P_Name__c</columns>
    <columns>Manager__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Wd_asset_del__c</columns>
    <columns>Monday_Board__c</columns>
    <columns>Target_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>