force-app/main/default/objects/WD_Projects__c/listViews/Rig_22.listView-meta.xml
<ListView>
    <fullName>Rig_22</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>P_Name__c</columns>
    <columns>Wd_asset_del__c</columns>
    <columns>Manager__c</columns>
    <columns>Monday_Board__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>WD_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>Rig 22</value>
    </filters>
    <label>Rig 22</label>
    <sharedTo>
        <group>Managing_Director</group>
        <group>Projects_and_Maintenance</group>
    </sharedTo>
</ListView>