force-app/main/default/objects/WD_Projects__c/listViews/Rig_26.listView-meta.xml
<ListView>
    <fullName>Rig_26</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>P_Name__c</columns>
    <columns>Wd_asset_del__c</columns>
    <columns>Manager__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>Rig 26</value>
    </filters>
    <label>Rig 26</label>
    <sharedTo>
        <group>Electrician</group>
        <group>Fabrication</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>Mechanics_Roma</group>
        <group>OPs_super</group>
        <group>Projects_and_Maintenance</group>
    </sharedTo>
</ListView>