force-app/main/default/objects/WD_Projects__c/listViews/Rig_28.listView-meta.xml
<ListView>
    <fullName>Rig_28</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>P_Name__c</columns>
    <columns>Wd_asset_del__c</columns>
    <columns>Manager__c</columns>
    <columns>Monday_Board__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>WD_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>Rig 28</value>
    </filters>
    <label>Rig 28</label>
</ListView>