force-app/main/default/objects/WD_Projects__c/listViews/yle.listView-meta.xml
<ListView>
    <fullName>yle</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>P_Name__c</columns>
    <columns>Wd_asset_del__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Manager__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Unit__c</field>
        <operation>contains</operation>
        <value>yle</value>
    </filters>
    <label>YLE</label>
    <sharedTo>
        <group>YLE</group>
    </sharedTo>
</ListView>